--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
         display: inline-block;
         width: 30px; /* Adjust size as needed */
         height: 30px; /* Adjust size as needed */
-        background-image: url('sound_icon.png'); /* Add your sound icon image */
+        background-image: url('images/sound_icon.png'); /* Add your sound icon image */
         background-size: cover;
       }
 
@@ -234,9 +234,9 @@
   </head>
 
   <body>
-    <audio id="first_audio" src="first_audio.mp3" preload="auto"></audio> <!-- Added audio for text -->
-    <audio id="second_audio" src="second_audio.mp3" preload="auto"></audio> <!-- Added audio for text -->
-    <audio id="third_audio" src="third_audio.mp3" preload="auto"></audio> <!-- Added audio for text -->
+    <audio id="first_audio" src="audio/first_audio.mp3" preload="auto"></audio>
+    <audio id="second_audio" src="audio/second_audio.mp3" preload="auto"></audio>
+    <audio id="third_audio" src="audio/third_audio.mp3" preload="auto"></audio>
     <header>
             <h1>AI Diagnosis Project</h1>
         <p>Your trusted assistant for accurate healthcare diagnosis</p>
@@ -264,7 +264,7 @@
           patient outcomes.
         </p>
         <button onclick="playAudio('first_audio')" id="playButton1"class="audioButton"><span class="audioIcon"></span></button>
-        <img src="healthcare1.jpg" alt="Medical Professionals Image">
+        <img src="images/healthcare1.jpg" alt="Medical Professionals Image">
     </section>
 
     <section id="practice_managers">
@@ -279,7 +279,7 @@
           streamline your practice operations and enhance overall efficiency.
         </p>
         <button onclick="playAudio('second_audio')" id="playButton2"class="audioButton"><span class="audioIcon"></span></button>
-        <img src="healthcare2.jpg" alt="Medical Professionals Image">
+        <img src="images/healthcare2.jpg" alt="Medical Professionals Image">
     </section>
 
     <section id="potential_patients">
@@ -294,7 +294,7 @@
           towards better well-being today.
         </p>
         <button onclick="playAudio('third_audio')"id="playButton3"class="audioButton"><span class="audioIcon"></span></button>
-        <img src="healthcare3.jpg" alt="Medical Professionals Image">
+        <img src="images/healthcare3.jpg" alt="Medical Professionals Image">
     </section>
     <section id="chat-introduction">
             <h2>Introducing Our Assistant Chatbot</h2>
