--- a/index.html
+++ b/index.html
@@ -407,6 +407,11 @@
   <ul id="reviewList"></ul>
 </section>
 
+<section id="blog">
+  <h2>Check Out Our Latest Blog Posts</h2>
+  <p>Explore insightful articles on medical topics written by our team of experts.</p>
+  <a href="posts">Visit Our Blog</a>
+</section>
 
 
 </main>
